# manga-scrapper

./: .gitignore  Pipfile  crawling.service  function.txt  mangas.txt  pyproject.toml
data/: mangas.txt  nettruyen.json
manga_scraper/: commons.py  config.py  info.py  list.py  main.py
src/: commons.py  info.py  list.py  main.py  mangas.txt  models.py  upload.py
