[tool.poetry]
name = "manga-scraper"
version = "0.1.0"
description = ""
authors = ["Phạm Văn Phúc <phuclaplace@gmail.com>"]
readme = "README.md"
packages = [{include = "manga_scraper"}]

[tool.poetry.scripts]
start = "manga_scraper.main:start"


[tool.poetry.dependencies]
python = "^3.10"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.4"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
